--- a/css/index.css
+++ b/css/index.css
@@ -14,8 +14,9 @@
       --html: #111111;
       --footer: #fff;
       --headerFooterBg: #30343F;
-      --buttonBg: #30343F;
-      --buttonText: #fff;
+      --buttonColeccionBg: #30343F;
+      --buttonColeccionText: #fff;
+      --buttonColeccionHoverBg: #3e444e;
       --hrArticle: #FF3333;
       --navBar: #fff;
       --hero: #fff;
@@ -24,6 +25,7 @@
       --nuevoBg: #FF3333;
       --nuevoText: #fff;
       --cuotaSinInteres: #1D84B5;
+
   }
 
   html {
@@ -110,23 +112,23 @@
       height: 388px;
       color: var(--hero);
       padding: 100px;
-      
+
   }
 
-  section.hero_section_funkos_header article { 
-        max-width: 1200px;
+  section.hero_section_funkos_header article {
+      max-width: 1200px;
       margin: 0 auto;
       margin-bottom: 100px;
-      }
+  }
 
   section.hero_section_funkos_header h3 {
       font-size: 40px;
       margin-bottom: 10px;
-      
+
   }
 
   section.hero_section_funkos_header button {
-    font-family: 'Inter', sans-serif;
+      font-family: 'Inter', sans-serif;
       display: flex;
       align-items: center;
       background-color: var(--buttonHeroBg);
@@ -140,6 +142,11 @@
       text-transform: uppercase;
   }
 
+  section.hero_section_funkos_header button:hover {
+    background-color: var(--buttonHeroText);
+    color: var(--buttonHeroBg)
+
+  }
 
 
   /* MAIN */
@@ -186,8 +193,8 @@
   button.button_ver_coleccion {
       display: flex;
       align-items: center;
-      background-color: var(--buttonBg);
-      color: var(--buttonText);
+      background-color: var(--buttonColeccionBg);
+      color: var(--buttonColeccionText);
       border-radius: 50px;
       padding: 30px 60px;
       height: 50px;
@@ -197,58 +204,64 @@
       border: none;
   }
 
-/* ÚLTIMOS LANZAMIENTO */
 
-.ultimos_lanzamientos h2 {
-    font-size: 40px;
-}
+  button.button_ver_coleccion:hover {
+      background-color: var(--buttonColeccionHoverBg);
+      color: var(--buttonBg);
+      border: var(--nuevoBg);
+  }
 
-.ultimos_lanzamientos article {
-    position: relative;
-    margin-top: 50px;
-}
+  /* ÚLTIMOS LANZAMIENTO */
 
-.ultimos_lanzamientos picture .span_nuevo {
-    position: absolute;
-    right: 0px;
-    background-color: var(--nuevoBg);
-    color: var(--nuevoText);
-    padding: 6px 24px;
-    font-size: 14px;
-    text-transform: uppercase;
-}
+  .ultimos_lanzamientos h2 {
+      font-size: 40px;
+  }
 
-.ultimos_lanzamientos ul {
-  display: flex;
-  justify-content: center;
-  gap: 20px; 
-}
+  .ultimos_lanzamientos article {
+      position: relative;
+      margin-top: 50px;
+  }
+
+  .ultimos_lanzamientos picture .span_nuevo {
+      position: absolute;
+      right: 0px;
+      background-color: var(--nuevoBg);
+      color: var(--nuevoText);
+      padding: 6px 24px;
+      font-size: 14px;
+      text-transform: uppercase;
+  }
+
+  .ultimos_lanzamientos ul {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+  }
 
 
 
-.ultimos_lanzamientos picture img {
-  max-width: 100%; 
-}
+  .ultimos_lanzamientos picture img {
+      max-width: 100%;
+  }
 
 
 
-div.ultimos_lanzamientos_text {
-    display: grid;
-    gap: 20px;
-}
+  div.ultimos_lanzamientos_text {
+      display: grid;
+      gap: 20px;
+  }
 
-div.ultimos_lanzamientos_text p {
-    font-weight: 500;
-    font-size: 18px;
-}
+  div.ultimos_lanzamientos_text p {
+      font-weight: 500;
+      font-size: 18px;
+  }
 
-div.ultimos_lanzamientos_text p.cuotas_sin_interes {
-    font-weight: 700;
-    color:var(--cuotaSinInteres)
-}
+  div.ultimos_lanzamientos_text p.cuotas_sin_interes {
+      font-weight: 700;
+      color: var(--cuotaSinInteres)
+  }
 
-div.ultimos_lanzamientos_text h4 {
-    font-weight: 700;
-    font-size: 22px;
-}
-
+  div.ultimos_lanzamientos_text h4 {
+      font-weight: 700;
+      font-size: 22px;
+  }
