--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,7 @@
       font-family: 'Inter', sans-serif;
       font-size: 62.5%;
       color: var(--html);
+      scroll-behavior: smooth;
   }
 
   a {
@@ -102,6 +103,7 @@
       text-align: center;
       padding-bottom: 20px;
   }
+
 
   /* HERO */
 
