--- a/src/views/pages/error404.ejs
+++ b/src/views/pages/error404.ejs
@@ -2,11 +2,13 @@
 
 <body>
     <!-- HEADER -->
-    <%- include('../partials/header.ejs') %><!-- HERO -->
+    <%- include("../partials/header.ejs") %><!-- HERO -->
 
     <!-- MAIN -->
 
-    <h1>Carrito</h1>
+    <main class="container">
+        <img src="/images/404.jpg" alt="404">
+    </main>
 
     <!-- FOOTER -->
     <%- include("../partials/footer.ejs") %>
