--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -14,7 +14,7 @@
             </ul>
             <picture>
                 <a href="#nav_header">
-                    <img src="./images/branding/isotype.svg"
+                    <img src="/images/branding/isotype.svg"
                         alt="Isologotipo de la marca Funkoshop">
                 </a>
             </picture>
