--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -6,8 +6,34 @@
 
     <!-- MAIN -->
 
-    <main class="container">
-        <h1>LOGIN</h1>
+    <main class="login_container">
+        <main id="login" class="container">
+            <h2 class="login_title">INGRESAR A MI CUENTA</h2>
+            <form class="login_form">
+                <div class="form_group">
+                    <div class="form_email">
+                        <label class="form__label" for="email">Email:</label>
+                        <input class="form__input" type="text" name="email"
+                            id="email" placeholder="johndoe@email.com">
+                    </div>
+                    <div class="form_pass">
+                        <label class="form_label"
+                            for="password">Contraseña:</label>
+                        <input class="form_input" type="password"
+                            name="password" id="password"
+                            placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;">
+                    </div>
+                </div>
+                <div class="form_submit">
+                    <input class="input_submit" type="submit" value="Ingresar">
+                    <div class="form_remember">
+                        <input type="checkbox" name="remember" id="">
+                        <label for="">Recordarme</label>
+                    </div>
+                </div>
+                <a class="form_forgot" href="">Olvidé mi contraseña</a>
+            </form>
+        </main>
     </main>
 
     <!-- FOOTER -->
