--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,6 +1,10 @@
-main.container {
+.cart-tbody {
     margin-top: 128px;
 }
+
+/* .cart-tr {
+    margin-top: 100px
+} */
 
 h1.carrito_de_compras {
     color: #111;
@@ -15,6 +19,10 @@ h1.carrito_de_compras {
     margin-bottom: 100;
 }
 
+.item-section img{
+    height: 200px;
+    
+}
 table tr {
     border-radius: 10px;
 box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
@@ -24,17 +32,31 @@ box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
 
 .cart-table {
     margin-top: 60px;
+    width: 100%;
 }
 
 .cart-tbody{
-/* display: flex; */
 justify-content: space-between;
 align-items: center;
+align-self: center;
 text-align: center;
 border-radius: 25px;
 background: #FAFAFF;
-
 margin: 0 auto;
+}
+
+
+.item-article{
+    display: flex;
+    align-items: flex-start;
+}
+
+.item-article span {
+    margin-top: 10px;
+    font-family: 'Inter';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
 }
 
 th {
@@ -48,9 +70,20 @@ th {
     height: 51px;
 }
 
-.cart-td-precio-x{
+.cart-td-precio {
     /* display: flex; */
-    align-self: center;
-    align-content: center;
+    align-items: center;
     justify-content: center;
+    gap: 8px;
+    /* width: 100%;  */
+}
+
+.cart-td-precio p {
+    font-family: 'Inter';
+    font-size: 18px;
+    font-style: normal;
+}
+
+.item-agregar_al_carrito .item-acciones button {
+    background-color: red;
 }
