--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="/css/cart.css">
     <link rel="stylesheet" href="/css/item.css">
     <link rel="stylesheet" href="/css/shop.css">
+    <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet"
         href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
     <link rel="stylesheet"
         href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/glide.min.js"
         integrity="sha512-IkLiryZhI6G4pnA3bBZzYCT9Ewk87U4DGEOz+TnRD3MrKqaUitt+ssHgn2X/sxoM7FxCP/ROUp6wcxjH/GcI5Q=="
